--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,5 +6,11 @@
 .vmenu_on, .vmenu_off{margin:2px 0px;}
 .vmenu_on .vmenuitem{border:1px solid #cccc77; border-left:5px solid #cccc77;}
 .vmenu_off .vmenuitem{border:1px solid #77cccc; border-left:5px solid #77cccc;}
-.vmenu_on ul{display:auto; margin:2px auto;}
+.vmenu_on ul{display:inline-table; margin:2px auto;}
 .vmenu_off ul{display:none;}
+
+
+ul.list li{
+  float: left;
+  width: 200px;
+}
