--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
 <h1><%= @user.name %></h1>
 
-<%= render "projects_list" %>
+<%= render "projects_list" %><br><br>
 
+<h3>お気に入り一覧</h3>
 <ul>
+<li>
 <% @user.favorites.each.with_index do |favorite, i| %>
  <%= link_to favorite.title, project_path(favorite.project) %><br><br>
 <% end %> 
+</li>
 
 <%= form_for [@user, @user.favorites.build] do |f| %>
 <%= f.text_field :title %>
