projectのCSSを少し変更 ゲームタイトルのページ内にお気に入り登録ボタンと大会ページに飛ぶボタンを右寄せに表示

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,10 @@
 <%- model_class = Project -%>
-<div class="page-header">
+<div class="page-header", style="display:inline;">
   <h1><%= @project.title %></h1>
+  <div class="button"><%= button_to "お気に入り登録",{:controller => "favorites", :action => "create", :user_id => params[:user_id], :project_id => params[:id], :title => @project.title}, :class => "btn btn-default" %></div>
+  <div style="float:right;"><%= link_to "大会", project_matchings_path(@project.id), :class => "btn btn-default" %></div>
 </div>
-<%= link_to "[大会]", project_matchings_path(@project.id) %><br>
+ 
 
 <% @project.tasks.each.with_index do |task, i| %>
 	<%= i+1 %> &nbsp; <%= "名無しのゲーマー" %>
