--- a/app/views/users/_projects_list.html.erb
+++ b/app/views/users/_projects_list.html.erb
@@ -8,7 +8,7 @@ function getParentObj(obj){return obj.parentElement || obj.parentNode;}
   <ul class="list">
     <% projects = Project.where("genre = ?", "RPG") %>
     <% projects.each do |project| %>
-    <li><%= link_to project.title, project_path(project.id) %></li>
+    <li><%= link_to project.title, user_project_path(@user.id, project.id) %></li>
     <% end %>
   </ul>
 </div>
@@ -17,7 +17,7 @@ function getParentObj(obj){return obj.parentElement || obj.parentNode;}
   <ul class="list">
     <% projects = Project.where("genre = ?", "FPS") %>
     <% projects.each do |project| %>
-      <li><%= link_to project.title, project_path(project.id) %></li>
+      <li><%= link_to project.title, user_project_path(@user.id, project.id) %></li>
     <% end %>
   </ul>
 </div>
