トーナメント機能作成途中

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
 <p>
-  <strong>参加者:</strong>
-  <%= @tournament.participants %>
+  <%= @tournament.cards %>
+</p>
+<p>
+  <%= @tournament.card %>
 </p>
