--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,16 @@
+<ul class="nav nav-tabs nav-stacked">
 <h1><%= @user.username %></h1>
+</ul><br>
 
 <% if current_player.username == params[:id] %>
   <%= render "projects_list" %><br><br>
 <% end %>
 
 <h3>お気に入り一覧</h3>
-<ul>
+<table class="table table-hover">
 <% @user.favorites.each do |favorite| %>
- <h5><li><%= link_to favorite.title, user_project_path(@user.id, favorite.project) %><br></li></h5>
-<% end %> 
-
+<tr><td><h5>
+<%= link_to favorite.title, user_project_path(@user.id, favorite.project) %>
+</h5></td></tr>
+<% end %>
+</table>
