--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,10 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.vmenuitem{background-color:#ffffcc; cursor:pointer; width:100px;}
+.vmenuitem{background-color:#FFFFFF; cursor:pointer; width:100px;}
 .vmenu_on, .vmenu_off{margin:2px 0px;}
-.vmenu_on .vmenuitem{border:1px solid #cccc77; border-left:5px solid #cccc77;}
-.vmenu_off .vmenuitem{border:1px solid #77cccc; border-left:5px solid #77cccc;}
+.vmenu_on .vmenuitem{border:1px solid #DC143C; border-left:5px solid #DC143C;}
+.vmenu_off .vmenuitem{border:1px solid #00008B; border-left:5px solid #00008B;}
 .vmenu_on ul{display:inline-table; margin:2px auto;}
 .vmenu_off ul{display:none;}
 
