--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,29 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>プロフィールの変更</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :username %><br />
+  <div><%= f.label :username, 'ユーザー名' %><br />
   <%= f.text_field :username, autofocus: true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :password, '新しいパスワード' %> <i>(変更しないなら入力は不要です)</i><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :password_confirmation, 'パスワードの確認' %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div><%= f.label :current_password, '現在のパスワード' %> <i>(確認のために現在のパスワードを入力してください)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "変更を保存する" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>アカウントを消去</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "アカウントを消去する", registration_path(resource_name), method: :delete, data: { confirm: "本当にいいですか？" }  %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "戻る", :back %>
