--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Myapp</title>
+  <title>バトリング</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -17,7 +17,7 @@
   <header>
     <nav>
       <% if player_signed_in? %> 
-        Logged in as <strong><%= current_player.username %></strong>.<br>
+        <strong><%= current_player.username %></strong>として<br>ログインしています。<br>
         <%= link_to 'プロフィール変更', edit_player_registration_path %> |
         <%= link_to "ログアウト", destroy_player_session_path, method: :delete %>
       <% else %>
