--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,11 +16,11 @@
   <% end %>
 
   <div class="control-group">
-    <%= f.label :genre, :class => 'control-label' %>
+    <%= f.label 'ジャンル', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :genre, :class => 'form-control' %>
     </div>
-    <%= f.label :title, :class => 'control-label' %>
+    <%= f.label 'タイトル', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :title, :class => 'form-control' %>
     </div>
@@ -28,8 +28,8 @@
   </div>
 
 
+  <br>
   <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+  <%= link_to t('.cancel', :default => t("キャンセル")),
             projects_path, :class => 'btn btn-default' %>
-
 <% end %>
