--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,11 @@
 <%- model_class = Project -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>登録タイトル一覧</h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th>タイトル</th>
   </thead>
   <tbody>
     <% @projects.each do |project| %>
@@ -13,12 +13,12 @@
       <td><%= link_to project.title, project_path(project.id) %></td>
       <td>
         <%= link_to "大会", project_matchings_path(project.id) %>
-        <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+        <%= link_to t('.destroy', :default => t("削除")),
         project_path(project.id),
         :method => :delete,
         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
         :class => 'btn btn-xs btn-danger pull-right' %>
-        <%= link_to t('.edit', :default => t("helpers.links.edit")),
+        <%= link_to t('.edit', :default => t("編集")),
         edit_project_path(project.id), :class => 'btn btn-default btn-xs pull-right' %>
       </td>
     </tr>
@@ -26,6 +26,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("新規作成")),
 new_project_path,
 :class => 'btn btn-primary' %>
