--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs nav-stacked">
-<h1><%= @user.username %></h1>
+<h1><%= @user.username %>のユーザーページ</h1>
 </ul><br>
 
 <% if current_player.username == params[:id] %>
