--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,14 @@
 <% @user.favorites.each do |favorite| %>
 <tr><td><h5>
 <%= link_to favorite.title, user_project_path(@user.id, favorite.project) %>
+  <div style="float:right;">
+    <%= link_to "大会", project_matchings_path(favorite.project.id), :class => "btn btn-default" %>
+    <%= link_to t('.destroy', :default => t("削除")),
+        user_favorite_path(@user.id, favorite.project.id),
+        :method => :delete,
+        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'お気に入り一覧から削除します。本当にいいですか？')) },
+        :class => "btn btn-danger" %>
+  </div>
 </h5></td></tr>
 <% end %>
 </table>
