--- a/app/views/matchings/edit.html.erb
+++ b/app/views/matchings/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render "form" %>
 
-<%= link_to 'Show', project_matching_path(@create_matching.project_id, @create_matching.id) %> |
-<%= link_to 'Back', :back %>
+<%= link_to '大会一覧へ', project_matching_path(@create_matching.project_id, @create_matching.id) %> |
+<%= link_to '戻る', :back %>
