--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label "名前" %><br>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "参加する!" %>
   </div>
 <% end %>
