--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -6,7 +6,7 @@
 <p>
   <%= @tournament.result %>さんがこの大会を制しました!
 </p>
-<% else %>
+<% elsif @card.player_a %>
 <p>
   <%= radio_button "page", "result", @card.player_a %>
   <%= @card.player_a %>
@@ -15,7 +15,10 @@
   <%= radio_button "page", "result", @card.player_b %>
 </p>
 <%= submit_tag "報告" %>
+<% else %>
+この大会には参加者がいない、もしくは組み合わせの抽選中です。<br>
+もう一度更新してください。
 <% end %>
 <% end %>
 
-<%= link_to 'Back', project_matchings_path(1) %>
+<%= link_to '大会一覧へ', project_matchings_path(@project.id) %>
