--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the Home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+p.sample1 {
+width:400px; height:80px; padding:15px;
+border:dashed 20px #000000; 
+background-image:url("images/bg_flower.png");
+background-size:contain;
+}
