--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,16 +7,37 @@
 </head>
 <body>
 
-<div class = "logo">
-<center>
-  <%= image_tag '/../../assets/logo2.gif', :width => '758', :height => '254' %><br>
-</center>
+<div class="home-wrap">
+  <%= yield %>
 </div>
 
-<div class = "sample">
+<nav class="home-nav">
+  <table rules="none" width = "100%">
+    <td><%= image_tag '/../../assets/logo_black.png', :width => '400', :height => '90' %></td>
+    <td align = "right"><%= link_to "初めての方はここから", new_player_registration_path, :class => "btn btn-default btn-lg block" %></td>
+    <td align = "center"><%= link_to "今すぐ絆を深める", new_player_session_path, :class => "btn btn-default btn-lg block" %></td>
+</table>
+</nav>
+
+
+<div class = "back">
+  <div class = "logo">
+  <center>
+    <%= image_tag '/../../assets/logo.gif', :width => '758', :height => '254' %><br>
+  </center>
+  </div>
+
   <div class = "sign_in">
     <%= link_to image_tag('/../../assets/signin2.png', :width => '470', :height => '200'), new_player_registration_path %>
     <%= link_to image_tag('/../../assets/login2.png', :width => '470', :height => '200'), new_player_session_path %>
+  </div>
+
+  <div class = "advertize">
+    <%= image_tag '/../../assets/advertize.png', :width => '940', :height => '400' %>
+  </div>
+
+  <div class = "explain">
+    <%= image_tag '/../../assets/explain1.png', :width => '940', :height => '600' %>
   </div>
 </div>
 </body>
