不必要なコードの記述を削除

--- a/app/views/users/_projects_list.html.erb
+++ b/app/views/users/_projects_list.html.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript"><!--
+<script><!--
 function doToggleClassName(obj, onClassName, offClassName){obj.className = (obj.className != onClassName) ? onClassName : offClassName;}
 function getParentObj(obj){return obj.parentElement || obj.parentNode;}
 //--></script>
