--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -18,6 +18,7 @@
 <% end %>
 <% end %>
 
+<%= render "tournament_graph" %>
 <%= render :template => "chat/index" %>
 
 <%= link_to 'Back', project_matchings_path(1) %>
