--- a/app/assets/stylesheets/tournaments.css.scss
+++ b/app/assets/stylesheets/tournaments.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Tournaments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.popup{
+    position: relative;
+}
+
+.popup .button{
+    width:150px;
+    height:50px;
+    background:#4798bd;
+}
+
+.popup div.tournament {
+    background: #fffacd;
+    border: 5px ridge #ff4500;
+    color: #000000;
+    font-size: 120%;
+    padding: 5px;
+    margin: 10px;
+    width: 60%;
+    display: none;
+}
