--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,11 +5,16 @@
   <div style="float:right;"><%= link_to "大会", project_matchings_path(@project.id), :class => "btn btn-default" %></div>
 </div><br><br>
  
-
 <% @project.tasks.each.with_index do |task, i| %>
-	<%= i+1 %>. &nbsp; <%= link_to "#{task.contributor}", user_path(task.contributor) %> &nbsp; <%= task.time %>
-	<%= simple_format(task.title) %><br><br>
-<% end %>	
+  <div class="panel panel-default">
+    <div class="panel-heading">
+     <%= i+1 %>. &nbsp; <%= link_to "#{task.contributor}", user_path(task.contributor) %> &nbsp; <%= task.time %>
+    </div>
+    <div class="panel-body">
+     <%= simple_format(task.title) %><br><br>
+   </div>
+  </div>
+<% end %> 
 
 <div class="form-horizontal" role="form"> 
 <%= form_for [@project, @project.tasks.build] do |f| %>
