turbolinksによって引き起こされていた、初回ページ遷移時にjQueryのイベントが発火されなかった問題を解決 - matching/indexからshowのリンクが押される際にturbo linkを無効化するようにした - これによってロードは遅くなるが、ページ全体を読み直す事によりイベントを発火させる

--- a/app/views/matchings/index.html.erb
+++ b/app/views/matchings/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @create_matchings.each do |create_matching| %>
       <tr>
-        <td><%= link_to "#{create_matching.name}", project_matching_path(create_matching.project_id, create_matching.id) %></td>
+        <td><%= link_to "#{create_matching.name}", project_matching_path(create_matching.project_id, create_matching.id), data: { "no-turbolink" => true } %></td>
         <td><%= create_matching.owner %></td>
         <td><%= create_matching.title %></td>
         <td><%= create_matching.reguration %></td>
