--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <ul class="nav nav-tabs nav-stacked">
-<h1><%= @user.username %>のユーザーページ</h1>
+<% if current_player.username == params[:id] %>
+  <h1>ようこそ<%= @user.username %>さん</h1>
+<% elsif %>
+  <h1><%= @user.username %>さんのページ</h1>
+<% end %>
 </ul><br>
 
 <% if current_player.username == params[:id] %>
@@ -11,14 +15,16 @@
 <% @user.favorites.each do |favorite| %>
 <tr><td><h5>
 <%= link_to favorite.title, user_project_path(@user.id, favorite.project) %>
+  <% if current_player.username == params[:id] %>
   <div style="float:right;">
-    <%= link_to "大会", project_matchings_path(favorite.project.id), :class => "btn btn-default" %>
+    <%= link_to "大会", project_matchings_path(favorite.project.id), :class => "btn btn-default glyphicon glyphicon-fire" %>
     <%= link_to t('.destroy', :default => t("削除")),
         user_favorite_path(@user.id, favorite.project.id),
         :method => :delete,
         :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'お気に入り一覧から削除します。本当にいいですか？')) },
-        :class => "btn btn-danger" %>
+        :class => "btn btn-danger glyphicon glyphicon-remove" %>
   </div>
+  <% end %>
 </h5></td></tr>
 <% end %>
 </table>
