大会ページの英語箇所を日本語に変更 大会参加者0の場合のエラーを回避するよう変更 seedsファイルに4つのゲームタイトルを記入

--- a/app/views/matchings/edit.html.erb
+++ b/app/views/matchings/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing create_matching</h1>
+<h1>大会を編集する</h1>
 
 <%= render "form" %>
 
-<%= link_to 'Show', project_matching_path(@create_matching.project_id, @create_matching.id) %> |
-<%= link_to 'Back', :back %>
+<%= link_to '大会一覧に戻る', project_matching_path(@create_matching.project_id, @create_matching.id) %> |
+<%= link_to '戻る', :back %>
