--- a/app/views/matchings/index.html.erb
+++ b/app/views/matchings/index.html.erb
@@ -1,16 +1,15 @@
-<h1>Listing create_matchings</h1>
-<%= link_to 'New Create matching', new_project_matching_path(@project.id) %>
+<h1><%= @project.title %> 大会一覧</h1>
+<%= link_to '大会を作成する!', new_project_matching_path(@project.id) %>
 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Owner</th>
-      <th>Title</th>
-      <th>Reguration</th>
-      <th>Limit</th>
-      <th>Start</th>
-      <th>Memo</th>
+      <th>大会名</th>
+      <th>主催者</th>
+      <th>参加条件</th>
+      <th>参加締切</th>
+      <th>開催日時</th>
+      <th>備考</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,13 +19,10 @@
       <tr>
         <td><%= link_to "#{create_matching.name}", project_matching_path(create_matching.project_id, create_matching.id), data: { "no-turbolink" => true } %></td>
         <td><%= create_matching.owner %></td>
-        <td><%= create_matching.title %></td>
         <td><%= create_matching.reguration %></td>
         <td><%= create_matching.limit %></td>
         <td><%= create_matching.start %></td>
         <td><%= create_matching.memo %></td>
-        <td><%= link_to 'Edit', edit_project_matching_path(create_matching.project_id, create_matching.id) %></td>
-        <td><%= link_to 'Destroy', project_matching_path(create_matching.project_id, create_matching.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
