--- a/app/views/matchings/show.html.erb
+++ b/app/views/matchings/show.html.erb
@@ -1,42 +1,42 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>大会名</strong>
   <%= @create_matching.name %>
 </p>
 
 <p>
-  <strong>Owner:</strong>
+  <strong>主催者</strong>
   <%= @create_matching.owner %>
 </p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>作品名</strong>
   <%= @create_matching.title %>
 </p>
 
 <p>
-  <strong>Reguration:</strong>
+  <strong>参加条件</strong>
   <%= @create_matching.reguration %>
 </p>
 
 <p>
-  <strong>Limit:</strong>
+  <strong>参加締切</strong>
   <%= @create_matching.limit %>
 </p>
 
 <p>
-  <strong>Start:</strong>
+  <strong>開催日時</strong>
   <%= @create_matching.start %>
 </p>
 
 <p>
-  <strong>Memo:</strong>
+  <strong>備考</strong>
   <%= @create_matching.memo %>
 </p>
 
 <p>
-  <strong>Participant:</strong>
+  <strong>参加者</strong> <%= @create_matching.participants.size %>名
   <% @create_matching.participants.each do |participant| %>
     <br>
     <%= participant.name %>
@@ -44,7 +44,7 @@
 </p>
 
 <% if @create_matching.limit > Time.now %>
-  <%= link_to 'Join', new_matching_participant_path(@create_matching) %> |
+  <%= link_to '参加する!', new_matching_participant_path(@create_matching) %> |
 <% end %>
-<%= link_to 'Edit', edit_project_matching_path(@create_matching.project_id, @create_matching.id) %> |
-<%= link_to 'Back', project_matchings_path(@create_matching.project_id) %>
+<%= link_to '編集', edit_project_matching_path(@create_matching.project_id, @create_matching.id) %> |
+<%= link_to '戻る', project_matchings_path(@create_matching.project_id) %>
