主催者と参加者の欄に初期値として現在ログインしている名前をセッティングするように修正

--- a/app/views/matchings/_form.html.erb
+++ b/app/views/matchings/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label "主催者" %><br>
-    <%= f.text_field :owner %>
+    <%= f.text_field :owner, value: current_player.username %>
   </div>
   <div class="field">
     <%= f.label "参加条件" %><br>
