--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label "名前" %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, value: current_player.username %>
   </div>
   <div class="actions">
     <%= f.submit "参加する!" %>
