--- a/app/views/matchings/index.html.erb
+++ b/app/views/matchings/index.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @project.title %> 大会一覧</h1>
-<%= link_to '大会を作成する!', new_project_matching_path(@project.id) %>
+<%= link_to '大会を作成する!', new_project_matching_path(@project.id) %> | <%= link_to "掲示板に戻る", user_project_path(current_player.id, @project.id) %>
 
 <table class="table table-striped">
   <thead>
@@ -7,7 +7,7 @@
       <th>大会名</th>
       <th>主催者</th>
       <th>参加条件</th>
-      <th>参加締切</th>
+      <th>参加状態</th>
       <th>開催日時</th>
       <th>備考</th>
       <th colspan="3"></th>
@@ -15,17 +15,29 @@
   </thead>
 
   <tbody>
-    <% @create_matchings.each do |create_matching| %>
-      <tr>
-        <td><%= link_to "#{create_matching.name}", project_matching_path(create_matching.project_id, create_matching.id), data: { "no-turbolink" => true } %></td>
-        <td><%= create_matching.owner %></td>
-        <td><%= create_matching.reguration %></td>
-        <td><%= create_matching.limit %></td>
-        <td><%= create_matching.start %></td>
-        <td><%= create_matching.memo %></td>
-      </tr>
-    <% end %>
-  </tbody>
+    <% @matchings.each do |matching| %>
+    <tr>
+      <td><%= link_to "#{matching.name}", project_matching_path(matching.project_id, matching.id), data: { "no-turbolink" => true } %></td>
+      <td><%= matching.owner %></td>
+      <td><%= matching.reguration %></td>
+      <% if matching.limit > Time.now %>
+        <td>受付中!(現在<%= matching.participants.size %>名)</td>
+      <% else %>
+        <% if matching.tournament.participants.nil? %>
+          <td>参加者なし</td>
+        <% elsif matching.tournament.result %>
+          <td>大会終了</td>
+        <% elsif matching.start < Time.now %>
+          <td>開催中!(<%= matching.participants.size %>名)</td>
+        <% elsif matching.start > Time.now %>
+          <td>受付終了(<%= matching.participants.size %>名)</td>
+        <% end %>
+      <% end %>
+    <td><%= matching.start %></td>
+    <td><%= matching.memo %></td>
+  </tr>
+  <% end %>
+</tbody>
 </table>
 
 <br>
