--- a/app/views/matchings/new.html.erb
+++ b/app/views/matchings/new.html.erb
@@ -1,11 +1,11 @@
 <h1>大会を新規に作成する</h1>
 <%= form_for [@project, @project.matchings.build] do |f| %>
-  <% if @create_matching.errors.any? %>
+  <% if @matching.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@create_matching.errors.count, "error") %> prohibited this create_matching from being saved:</h2>
+      <h2><%= pluralize(@matching.errors.count, "error") %> prohibited this matching from being saved:</h2>
 
       <ul>
-      <% @create_matching.errors.full_messages.each do |message| %>
+      <% @matching.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
