--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -7,8 +7,8 @@
 
 <p>
   <strong>大会名</strong>
-  <%= @create_matching.name %>
+  <%= @matching.name %>
 </p>
 
-<%= link_to '参加した詳細に戻る', matching_path(@create_matching) %>|
-<%= link_to '大会一覧に戻る', project_matchings_path(@create_matching.project_id, @create_matching.id) %>
+<%= link_to '参加した詳細に戻る', matching_path(@matching) %>|
+<%= link_to '大会一覧に戻る', project_matchings_path(@matching.project_id, @matching.id) %>
